Fixed spacing of all dots in sliders

--- a/assets/homepage.css
+++ b/assets/homepage.css
@@ -400,7 +400,7 @@
   
 
   /* .shop_by_collection-row .owl-dots{display: none;} */
-  .shop_by_collection-row button.owl-dot { width: 8px; height: 8px; background: #44444478!important; margin: 0 2px; border-radius: 50%!important; }
+  .shop_by_collection-row button.owl-dot { width: 8px; height: 8px; background: #44444478!important; margin: 0 5px; border-radius: 50%!important; }
   .shop_by_collection-row button.owl-dot.active { background: #7F7F7F!important; width: 40px; border-radius: 12px!important; }
   .shop_by_collection-row .owl-dots{text-align: center;}
   .shop_by_collection-row {padding-top: 0px;}
